argocd-managed/argocd/Ingress.argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
   - host: argocd.my-minikube
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: argocd
               port:
                 number: 80
